--- a/src/main/resources/addEntry.fxml
+++ b/src/main/resources/addEntry.fxml
@@ -17,7 +17,7 @@
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0"
             style="-fx-background-color: F0DCCA;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javapk.DiaryEntryController">
    <center>
-      <AnchorPane maxHeight="480.0" maxWidth="880.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color:  ; -fx-border-width: 3; -fx-border-color: black; -fx-border-style: solid;" BorderPane.alignment="CENTER">
+      <AnchorPane maxHeight="480.0" maxWidth="880.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: CDC6A5; -fx-border-width: 3; -fx-border-color: black; -fx-border-style: solid;" BorderPane.alignment="CENTER">
          <children>
             <TextField fx:id="title" layoutX="140.0" layoutY="63.0" prefWidth="200.0" promptText="Tytuł wpisu">
                <font>
