--- a/src/main/resources/displayPhotos.fxml
+++ b/src/main/resources/displayPhotos.fxml
@@ -9,30 +9,28 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-
 <?import java.util.ArrayList?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: F0DCCA;"
-            xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javapk.DisplayPhotosController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: F0DCCA;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javapk.DisplayPhotosController">
    <center>
       <AnchorPane maxHeight="660.0" maxWidth="1140.0" style="-fx-background-color: CDC6A5;" BorderPane.alignment="CENTER">
          <children>
             <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="15.0">
                <children>
-                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0">
+                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0" style="-fx-border-color: black; -fx-border-style: solid; -fx-border-width: 2;">
                      <children>
                         <Label fx:id="dateLabel_1" layoutX="14.0" layoutY="14.0" />
                         <ImageView fx:id="imageView_1" fitHeight="250.0" fitWidth="335.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
                         <Label fx:id="typeLabel_1" layoutX="326.0" layoutY="14.0" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0">
+                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0" style="-fx-border-color: black; -fx-border-style: solid; -fx-border-width: 2;">
                      <children>
                         <Label fx:id="dateLabel_2" layoutX="14.0" layoutY="14.0" />
                         <ImageView fx:id="imageView_2" fitHeight="250.0" fitWidth="335.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
                         <Label fx:id="typeLabel_2" layoutX="326.0" layoutY="14.0" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0">
+                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0" style="-fx-border-color: black; -fx-border-style: solid; -fx-border-width: 2;">
                      <children>
                         <Label fx:id="dateLabel_3" layoutX="14.0" layoutY="14.0" />
                         <ImageView fx:id="imageView_3" fitHeight="250.0" fitWidth="335.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
@@ -43,21 +41,21 @@
             </HBox>
             <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="340.0">
                <children>
-                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0">
+                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0" style="-fx-border-color: black; -fx-border-style: solid; -fx-border-width: 2;">
                      <children>
                         <Label fx:id="dateLabel_4" layoutX="14.0" layoutY="14.0" />
                         <ImageView fx:id="imageView_4" fitHeight="250.0" fitWidth="335.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
                         <Label fx:id="typeLabel_4" layoutX="326.0" layoutY="14.0" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0">
+                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0" style="-fx-border-color: black; -fx-border-style: solid; -fx-border-width: 2;">
                      <children>
                         <Label fx:id="dateLabel_5" layoutX="14.0" layoutY="14.0" />
                         <ImageView fx:id="imageView_5" fitHeight="250.0" fitWidth="335.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
                         <Label fx:id="typeLabel_5" layoutX="326.0" layoutY="14.0" />
                      </children>
                   </AnchorPane>
-                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0">
+                  <AnchorPane maxWidth="380.0" prefHeight="200.0" prefWidth="380.0" style="-fx-border-color: black; -fx-border-style: solid; -fx-border-width: 2;">
                      <children>
                         <Label fx:id="dateLabel_6" layoutX="14.0" layoutY="14.0" />
                         <ImageView fx:id="imageView_6" fitHeight="250.0" fitWidth="335.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="35.0" />
@@ -69,30 +67,30 @@
          </children>
          <fx:define>
             <ArrayList fx:id="dateLabelList">
-               <fx:reference source="dateLabel_1"/>
-               <fx:reference source="dateLabel_2"/>
-               <fx:reference source="dateLabel_3"/>
-               <fx:reference source="dateLabel_4"/>
-               <fx:reference source="dateLabel_5"/>
-               <fx:reference source="dateLabel_6"/>
+               <fx:reference source="dateLabel_1" />
+               <fx:reference source="dateLabel_2" />
+               <fx:reference source="dateLabel_3" />
+               <fx:reference source="dateLabel_4" />
+               <fx:reference source="dateLabel_5" />
+               <fx:reference source="dateLabel_6" />
             </ArrayList>
 
             <ArrayList fx:id="imageViewList">
-               <fx:reference source="imageView_1"/>
-               <fx:reference source="imageView_2"/>
-               <fx:reference source="imageView_3"/>
-               <fx:reference source="imageView_4"/>
-               <fx:reference source="imageView_5"/>
-               <fx:reference source="imageView_6"/>
+               <fx:reference source="imageView_1" />
+               <fx:reference source="imageView_2" />
+               <fx:reference source="imageView_3" />
+               <fx:reference source="imageView_4" />
+               <fx:reference source="imageView_5" />
+               <fx:reference source="imageView_6" />
             </ArrayList>
 
             <ArrayList fx:id="typeLabelList">
-               <fx:reference source="typeLabel_1"/>
-               <fx:reference source="typeLabel_2"/>
-               <fx:reference source="typeLabel_3"/>
-               <fx:reference source="typeLabel_4"/>
-               <fx:reference source="typeLabel_5"/>
-               <fx:reference source="typeLabel_6"/>
+               <fx:reference source="typeLabel_1" />
+               <fx:reference source="typeLabel_2" />
+               <fx:reference source="typeLabel_3" />
+               <fx:reference source="typeLabel_4" />
+               <fx:reference source="typeLabel_5" />
+               <fx:reference source="typeLabel_6" />
             </ArrayList>
          </fx:define>
       </AnchorPane>
@@ -110,7 +108,7 @@
             </Label>
          </center>
          <left>
-            <Button fx:id="menuButton" onAction="#returnToMenu" mnemonicParsing="false" style="-fx-background-color: F6828C;" text="Menu" BorderPane.alignment="CENTER">
+            <Button fx:id="menuButton" mnemonicParsing="false" onAction="#returnToMenu" style="-fx-background-color: F6828C;" text="Menu" BorderPane.alignment="CENTER">
                <font>
                   <Font size="15.0" />
                </font>
