--- a/src/main/resources/menu.fxml
+++ b/src/main/resources/menu.fxml
@@ -1,18 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
-      style="-fx-background-color: #6F9283;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javapk.MenuController">
-   <children>
-      <Button fx:id="addEntryButton" onAction="#addEntry" alignment="CENTER" mnemonicParsing="false" text="Dodaj nowy wpis do dziennika" />
-      <Button fx:id="displayEntriesButton" onAction="#displayEntries" alignment="CENTER" mnemonicParsing="false" text="Wyświetl wszystkie wpisy" />
-      <Button fx:id="displayMapButton" onAction="#displayPhotos" alignment="CENTER" mnemonicParsing="false" text="Wyświetl mapę i współrzędne obserwacji" />
-      <Button fx:id="displayPhotosButton" alignment="CENTER" mnemonicParsing="false" text="Wyświetl zgromadzone zdjęcia" />
-      <Button fx:id="loadButton" alignment="CENTER" mnemonicParsing="false" text="Wczytaj zapisany dziennik z pliku" />
-      <Button fx:id="saveButton" alignment="CENTER" mnemonicParsing="false" text="Zapisz dziennik do pliku" />
-      <Button fx:id="exitButton" onAction="#exitApplication" alignment="CENTER" mnemonicParsing="false" text="Wyjście" />
-   </children>
-</VBox>
+<BorderPane prefHeight="720.0" prefWidth="1280.0" style="-fx-background-color: #6F9283;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.javapk.MenuController">
+   <center>
+      <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="300.0">
+         <children>
+            <Button fx:id="addEntryButton" alignment="CENTER" mnemonicParsing="false" onAction="#addEntry" prefHeight="25.0" prefWidth="300.0" text="Dodaj nowy wpis do dziennika">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="displayEntriesButton" alignment="CENTER" mnemonicParsing="false" onAction="#displayEntries" prefHeight="25.0" prefWidth="300.0" text="Wyświetl wszystkie wpisy">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="displayMapButton" alignment="CENTER" mnemonicParsing="false" onAction="#displayMap" prefHeight="25.0" prefWidth="300.0" text="Wyświetl mapę i współrzędne obserwacji">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="displayPhotosButton" alignment="CENTER" mnemonicParsing="false" onAction="#displayPhotos" prefHeight="25.0" prefWidth="300.0" text="Wyświetl zgromadzone zdjęcia">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="exitButton" alignment="CENTER" mnemonicParsing="false" onAction="#exitApplication" prefHeight="25.0" prefWidth="300.0" text="Wyjście">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Button>
+         </children>
+      </VBox>
+   </center>
+   <top>
+      <Label text="Dziennik obserwacji" textFill="WHITE" BorderPane.alignment="CENTER">
+         <font>
+            <Font size="28.0" />
+         </font>
+         <padding>
+            <Insets top="30.0" />
+         </padding>
+      </Label>
+   </top>
+</BorderPane>
